[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl"
authors = [{ name = "Gary Mindlin Miguel", email = "garymm@garymm.org" }]
requires-python = ">=3.10,<3.11" # corax currently requires Python 3.10
dynamic = ["version"]
dependencies = [
    "corax @ git+https://github.com/ethanluoyc/corax#egg=corax",
    "dm-env-wrappers",
    "dm-haiku",
    "dm-reverb[tensorflow]",
    "equinox",
    "gymnasium[accept-rom-license]",
    "gymnasium[atari]",
    "jaxtyping",
    "jax[cuda12]",
    "mlflow-skinny",
    "rlds",
    "tensorflow-probability",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:jax.xla_computation is deprecated. Please use the AOT APIs.:DeprecationWarning",
    "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
    "ignore:jax.core.pp_eqn_rules is deprecated.:DeprecationWarning",
    "ignore:jax.tree_map is deprecated.:DeprecationWarning",
]
